home-automation/zigbee2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt
    app.kubernetes.io/name: zigbee2mqtt
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
        app.kubernetes.io/name: zigbee2mqtt 
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:2.1.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: zigbee2mqtt
              mountPath: /app/data
            - name: conbee-device
              mountPath: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2152763-if00
            - name: conbee-device
              mountPath: /dev/ttyAMA0
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: true
        - name: cron-borg
          image: ghcr.io/mattsve/borgmatic:0.5
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: zigbee2mqtt
              mountPath: /data
            - name: backup-config
              mountPath: /config
            - name: secrets
              mountPath: /root/.ssh
              readOnly: true
          args:
            - cron
            - /config/crontab
      volumes:
        - name: zigbee2mqtt
          emptyDir: {}
        - name: backup-config
          emptyDir: {}
        - name: backup-templates
          configMap:
            name: zigbee2mqtt-backup-templates
        - name: conbee-device
          hostPath:
            path: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2152763-if00
        - name: secrets
          secret:
            secretName: zigbee2mqtt
            items:
              - key: id_ed25519
                mode: 0600
                path: id_ed25519
              - key: id_ed25519.pub
                mode: 0644
                path: id_ed25519.pub
              - key: known_hosts
                mode: 0644
                path: known_hosts
        - name: backup-secrets
          secret:
            secretName: zigbee2mqtt
            items:
              - key: borg-repo
                mode: 0400
                path: borg-repo
              - key: borg-passphrase
                mode: 0400
                path: borg-passphrase
      nodeSelector:
        conbee: "true"
      tolerations:
        - key: 'node'
          operator: 'Equal'
          value: 'small'
          effect: 'NoSchedule'
