home-automation/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    name: zigbee2mqtt
