home-automation/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-http-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: zigbee2mqtt
            port: 
              name: http
    host: zigbee2mqtt.k3s.ingenstans.se
  tls:
    - hosts:
      - zigbee2mqtt.k3s.ingenstans.se
      secretName: zigbee2mqtt-http-ingress-cert
